# Ray-Tracer

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  imgui.ini
src/: camera.cpp  camera.h  main.cpp  ray.h  utils.h  vec3.h
src/hittables/: hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  sphere.cpp  sphere.h
src/materials/: material.cpp  material.h
src/math/: color.cpp  color.h  interval.cpp  interval.h  ray.cpp  ray.h  vec3.cpp  vec3.h
